--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+<div class="main-title">
+        <h1>Dashboard de Replays</h1>
+        <p>Acompanhamento de Performance</p>
+    </div>
     <div class="header">
         <select id="selectYear"></select>
         <div class="ativo-group">
