Adição do 'Acompanhamento de Performance'

--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
         <h1>Dashboard de Replays</h1>
         <p>Acompanhamento de Performance</p>
     </div>
+
+    <div class="stats-container" id="statsContainer">
+    <div class="stat-card">
+        <span class="stat-label">Total Replays</span>
+        <span class="stat-value" id="statTotal">0</span>
+    </div>
+    <div class="stat-card gain-border">
+        <span class="stat-label">Total Gains</span>
+        <span class="stat-value gain-color" id="statGains">0</span>
+    </div>
+    <div class="stat-card loss-border">
+        <span class="stat-label">Total Loss</span>
+        <span class="stat-value loss-color" id="statLoss">0</span>
+    </div>
+</div>
+
     <div class="header">
         <select id="selectYear"></select>
         <div class="ativo-group">
