Adição do resumo por ano e resumo total'

--- a/index.html
+++ b/index.html
@@ -14,18 +14,41 @@
         <p>Acompanhamento de Performance</p>
     </div>
 
-    <div class="stats-container" id="statsContainer">
-    <div class="stat-card">
-        <span class="stat-label">Total Replays</span>
-        <span class="stat-value" id="statTotal">0</span>
+<div class="stats-wrapper">
+    <div class="stats-group">
+        <h4 id="labelAno">Resumo de 2026</h4>
+        <div class="stats-container">
+            <div class="stat-card">
+                <span class="stat-label">Replays</span>
+                <span class="stat-value" id="anoTotal">0</span>
+            </div>
+            <div class="stat-card gain-border">
+                <span class="stat-label">Gains</span>
+                <span class="stat-value gain-color" id="anoGains">0</span>
+            </div>
+            <div class="stat-card loss-border">
+                <span class="stat-label">Loss</span>
+                <span class="stat-value loss-color" id="anoLoss">0</span>
+            </div>
+        </div>
     </div>
-    <div class="stat-card gain-border">
-        <span class="stat-label">Total Gains</span>
-        <span class="stat-value gain-color" id="statGains">0</span>
-    </div>
-    <div class="stat-card loss-border">
-        <span class="stat-label">Total Loss</span>
-        <span class="stat-value loss-color" id="statLoss">0</span>
+
+    <div class="stats-group">
+        <h4>Histórico Total</h4>
+        <div class="stats-container">
+            <div class="stat-card">
+                <span class="stat-label">Replays</span>
+                <span class="stat-value" id="totalGeral">0</span>
+            </div>
+            <div class="stat-card gain-border">
+                <span class="stat-label">Gains</span>
+                <span class="stat-value gain-color" id="totalGains">0</span>
+            </div>
+            <div class="stat-card loss-border">
+                <span class="stat-label">Loss</span>
+                <span class="stat-value loss-color" id="totalLoss">0</span>
+            </div>
+        </div>
     </div>
 </div>
 
