Adição do card de assertividade'

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                 <span class="stat-label">Loss</span>
                 <span class="stat-value loss-color" id="anoLoss">0</span>
             </div>
+            <div class="stat-card assertive-border">
+    <span class="stat-label">Assertividade</span>
+    <span class="stat-value" id="anoTaxa">0%</span>
+</div>
         </div>
     </div>
 
@@ -48,6 +52,10 @@
                 <span class="stat-label">Loss</span>
                 <span class="stat-value loss-color" id="totalLoss">0</span>
             </div>
+            <div class="stat-card assertive-border">
+    <span class="stat-label">Assertividade</span>
+    <span class="stat-value" id="totalTaxa">0%</span>
+</div>
         </div>
     </div>
 </div>
