Correção do Bug de não poder adicionar a mesma data em mais de um ativo e Adição do botão exportar relatório

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <button onclick="apagarAtivoAtual()" title="Apagar Ativo">🗑️</button>
         </div>
         <button onclick="abrirModalAtivo()" class="primary">+ Ativo</button>
+    <button onclick="exportarRelatorio()" class="btn-report">📄 Exportar</button>
     </div>
 
     <div id="status">Sincronizando...</div>
